--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,33 +1,54 @@
+# .github/workflows/ci.yml
 name: CI/CD Pipeline
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Check out code
+        uses: actions/checkout@v2
+
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '20'
-      - run: npm install
-      - run: npm run build
+          node-version: '20.x'
 
-  test:
-    runs-on: ubuntu-latest
-    needs: build
+      - name: Install dependencies
+        run: npm install
 
-    steps:
-      - uses: actions/checkout@v2
-      - run: npm install
-      - run: npm test
+      - name: Run tests
+        run: npm test
 
   deploy:
     runs-on: ubuntu-latest
     needs: test
+    if: github.ref == 'refs/heads/main' # Solo despliega en el branch 'main'
 
     steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '20.x'
+
+      - name: Install dependencies
+        run: npm install
+
       - name: Deploy to production
-        run: echo "Deployment step"
+        env:
+          NODE_ENV: production
+        run: |
+          echo "Starting deployment..."
+          # Comandos de despliegue para producción
+          # Por ejemplo: ssh o comandos de despliegue en la nube
